--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>訪問者数カウンター</title>
+    <title>ID配布</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>訪問者数: <span id="visitorCount">0</span> 人目</h1>
+    <h1>あなたのID: <span id="visitorCount">0</span> メモ用紙に上記のIDをメモし、クラウドワークスに戻ってください。</h1>
     <script src="script.js"></script>
 </body>
 </html>
